# Adventures

./: .gitignore  NamingConventions.md  NamingConventions~  README.md
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
Assignments/TSP/: approaches.h  currentapproach.h  mainfunc.h  makefile  matrixd.cpp  matrixd.h  program  rand.h  readme.md  source.cpp  town.h  util.h
C++/Fabula/: Fabula.g4  FabulaLexer.java  FabulaLexer.tokens  FabulaListener.java  FabulaParser.java
Testing/: JavaSyntaxTest.java  haskellParadise.hs  pythonParadise.py  rustParadise  rustParadise.rs
lcFabula/: CMakeLists.txt  makefile
lcFabula/src/: CMakeLists.txt  GenerateParser.bat  Grammar.flex  Grammar.output  Grammar.parse  Grammar.tab.c  Grammar.tab.cpp  Grammar.tab.hpp  Grammar.y  Grammar.ypp  XmlHelper.cpp  choice.cpp  destination.h  lex.yy.c  lex.yy.cc  lexer.cpp  parser.cpp  section.cpp  source.cpp  world.cpp
lcFabula/src/HTMLGeneratorInterface/: CMakeLists.txt  source.cpp
lcFabula/src/Parser/: CMakeLists.txt  Grammar.flex  Grammar.output  Grammar.tab.cpp  Grammar.tab.hpp  Grammar.ypp  fparser.cpp  fparser.h  lex.yy.cc  parse_exception.h  parse_tree_visitor.h  parser.cpp  parser.h  source.cpp  util.h  visitor_parent_binder.cpp  visitor_parent_binder.h  visitor_semantic_checker.cpp  visitor_semantic_checker.h  visitor_writer.cpp  xml_writer.cpp
lcFabula/src/Parser/ParseNodes/: choice.cpp  choice.h  destination.cpp  destination.h  fstring.cpp  fstring.h  header.cpp  header.h  parse_node.h  scene.cpp  scene.h  section.cpp  section.h
lcFabula/src/ParserCommandLine/: CMakeLists.txt
lcFabula/src/common/: xml_writer.cpp  xml_writer.h
lcFabula/src/common/ParseNodes/: choice.h  destination.cpp  destination.h  fstring.cpp  fstring.h  header.cpp  header.h  scene.cpp  section.h
lcFabula/src/include/: XmlHelper.h  choice.h  content.h  destination.h  fabula.h  fstring.h  fworld.h  header.h  lexer.cpp  lexer.h  parser.h  result.h  scene.h  section.h  tokens.h  world.h
lcFabula/src/parseNodes/: choice.cpp  choice.h  destination.cpp  destination.h  fstring.cpp  fstring.h  header.cpp  header.h  parse_node.h  scene.cpp  scene.h  section.cpp  section.h
lcLarki/: lcLarki.jucer  readme.md
lcLarki/Larki/: Larki.pro  Larki.pro.user.18  Larki.pro.user.3.2-pre1  camera.h  canvas.cpp  canvas.h  cursor.cpp  cursor.h  glwidget.cpp  glwidget.h  image.cpp  image.h  imagegpu.cpp  imagegpu.h  io.cpp  layer.cpp  layer.h  main.cpp  mainshader.cpp  mainshader.h  mainwindow.cpp  mainwindow.ui  pixelargb.cpp  pixelargb.h  rectangle.h  shaderprogram.cpp  shaderprogram.h  tile.h  virtualtilegrid.cpp  virtualtilegrid.h  world.cpp  world.h
lcLarki/Source/: Main.cpp  MainComponent.cpp  camera.cpp  canvas.cpp  canvas.h  canvas_helper.h  canvas_view.h  canvas_view_visitor.h  canvas_visitor.h  cursor.cpp  cursor.h  glwidget.cpp  image.cpp  image.h  imagegpu.cpp  imagegpu.h  io.cpp  io.h  layer.cpp  layer.h  mainshader.cpp  matrixd.cpp  operation_apply_brush.h  operation_render.cpp  operation_render.h  pixelrgba.cpp  pixelrgba.h  rectangle.h  shaderprogram.cpp  shaderprogram.h  sprite.h  stdafx.h  tile.cpp  tile.h  vertex.cpp  vertex.h  virtualtilegrid.cpp  virtualtilegrid.h  world.cpp  world.h
lcLarki/build-Larki-Desktop-Debug/: Larki  Makefile  log.txt  moc_glwidget.cpp  moc_mainwindow.cpp  ui_mainwindow.h
lcLarki/cloc-1.62/: cloc.1
lmFabula/: .classpath  .gitignore  .project  Choice.java  ChoiceList.java  CompilationException.java  CustomVisitor.java  FString.java  Fabula.g4  Fabula.tokens  FabulaBaseListener.java  FabulaLexer.java  FabulaParser.java  FabulaVisitor.java  Scene.java  Section.java  SectionLocation.java  Source.java  fabula-example.fab  makefile
lmFabula (copy)/: .project  FString.java  Fabula.tokens  FabulaBaseVisitor.java  FabulaLexer.java  FabulaParser.java  Section.java  makefile
lmFabula/lmFabula/: .gitignore
mcTypewriterApp/mcTypewriterApp/: defualttypewriter.cpp  defualttypewriter.h  drawablecharactersystem.cpp  drawablecharactersystem.h
mcVisualSensorySubstitution/: CMakeLists.txt
mcVisualSensorySubstitution/VisualSensorySubstitution/: VisualSensorySubstitution.sdf  VisualSensorySubstitution.sln  VisualSensorySubstitution.vcxproj
mcVisualSensorySubstitution/src/: CMakeLists.txt  source.cpp
scAlphabetDeducer/: readme.md  source.cpp
scBooleanFunctionSimplifier/: readme.md
sjMerilyn/: .project  readme.txt
smBooleanFunctionSimplifier/: makefile  readme.txt  source.cpp
spNQueenTheorem/: generator.py
spProcessing/Agario_sfd/: Agario_sfd.pde
spSudoku/: main.py  randomsolver  randomsolver.cpp  readme.md  solver  solver.cpp
(+55 files in other folders)
